--- a/ShoppingList/ShoppingList/Base.lproj/Main.storyboard
+++ b/ShoppingList/ShoppingList/Base.lproj/Main.storyboard
@@ -43,6 +43,9 @@
                                                                 <imageReference key="image" image="checkmark.square" catalog="system" symbolScale="large"/>
                                                             </state>
                                                             <state key="selected" image="checkmark.square.fill" catalog="system"/>
+                                                            <connections>
+                                                                <action selector="checkButtonClicked:" destination="pCm-QL-Drl" eventType="touchUpInside" id="tb3-0T-l5b"/>
+                                                            </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FS3-wg-uj3">
                                                             <rect key="frame" x="83" y="0.0" width="300" height="63"/>
