add:: 테이블 뷰 및 셀 연결 // 디테일 뷰 연결

--- a/DdayCalendar/DdayCalendar/Base.lproj/Main.storyboard
+++ b/DdayCalendar/DdayCalendar/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="197" id="WO2-lz-muj" customClass="MainTableViewCell" customModule="DdayCalendar" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="mainCell" rowHeight="197" id="WO2-lz-muj" customClass="MainTableViewCell" customModule="DdayCalendar" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="197"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WO2-lz-muj" id="8jg-eG-Kmy">
@@ -107,6 +107,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="ddayTableView" destination="ubI-0F-Ek8" id="HGG-IY-Haw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -115,7 +118,7 @@
         <!--Detail View Controller-->
         <scene sceneID="Uxx-6g-hG6">
             <objects>
-                <viewController id="e7A-xa-6qG" customClass="DetailViewController" customModule="DdayCalendar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="detailVC" id="e7A-xa-6qG" customClass="DetailViewController" customModule="DdayCalendar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hry-Bc-O3E">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -207,7 +210,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N6v-2E-fAs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1978" y="-35"/>
+            <point key="canvasLocation" x="1799" y="-35"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="G9X-cH-KcW">
