--- a/DdayCalendar/DdayCalendar/Base.lproj/Main.storyboard
+++ b/DdayCalendar/DdayCalendar/Base.lproj/Main.storyboard
@@ -141,11 +141,8 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="QnE-t9-xhT">
+                                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="QnE-t9-xhT">
                                                         <rect key="frame" x="0.0" y="46.333333333333343" width="373" height="384.66666666666663"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="150" id="0fm-Ol-taL"/>
-                                                        </constraints>
                                                     </datePicker>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어떤 날인가요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pce-i2-3bt">
                                                         <rect key="frame" x="0.0" y="457" width="373" height="20.333333333333314"/>
